--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@fontsource/dm-serif-display": "^4.5.8",
+    "@fontsource/ibm-plex-mono": "^4.5.12",
     "@fontsource/inter": "4.5.2",
+    "@fontsource/iosevka": "^4.5.4",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
