Change dark mode HR color

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ READMEcopy.md
 /data/blog/examples/
 /public/static/images/canada/
 README-original.md
+
+# work files -- original assets
+/work-files/
